# crypto-exchange-client-deribit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/crypto-exchange-client-deribit/: apiMessage.hpp  client.hpp  wsMessage.hpp
src/crypto-exchange-client-deribit/: CMakeLists.txt
src/crypto-exchange-client-deribit-demo/: CMakeLists.txt  _deribit-demo.cpp  api-secret.hpp
src/crypto-exchange-client-deribit/src/: apiMessage.cpp  client.cpp  wsMessage.cpp
